completed-login-for-single-user

--- a/login.html
+++ b/login.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>login</title>
     <script src="script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
+    <p><a href="/index.html">home</a></p>
+    <h1>login</h1>
     <form id="l">
-        <h1>login</h1>
-        <input id="lname" type="text" name="username" placeholder="username">
-        <input id="lpass" type="password" name="password" placeholder="password">
-        <button id="lbtn" type="submit">Submit</button>
-        <p>don't have an account? <a href="registration.html">register</a></p>
+      <input id="lname" type="text" name="username" placeholder="username" />
+      <input
+        id="lpass"
+        type="password"
+        name="password"
+        placeholder="password"
+      />
+      <button id="lbtn" type="submit">Submit</button>
+      <p>don't have an account? <a href="registration.html">register</a></p>
     </form>
-</body>
+  </body>
 </html>
