--- a/registration.html
+++ b/registration.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>register</title>
+    <title>registration</title>
     <script src="script.js" defer></script>
 </head>
 <body>
+    <p><a href="/index.html">home</a></p>
+    <h1>register</h1>
     <form id="rg">
-        <h1>register</h1>
         <input id="rgname" type="text" name="username" placeholder="username">
         <input id="rgpass" type="password" name="password" placeholder="password">
         <button id="rgbtn" type="submit">register</button>
