--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page</title>
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1>Home Page</h1>
     <p><a href="/login.html">login</a></p>
     <p><a href="/registration.html">register</a></p>
 </body>
