login-reg-page-complete

--- a/login.html
+++ b/login.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>login</title>
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
   </head>
   <body>
-    <p><a href="/index.html">home</a></p>
-    <h1>login</h1>
-    <form id="l">
+    
+    <div id="login-form">
+      <h1>login</h1>
+      <form id="l">
       <input id="lname" type="text" name="username" placeholder="username" />
       <input
         id="lpass"
@@ -20,5 +22,6 @@
       <button id="lbtn" type="submit">Submit</button>
       <p>don't have an account? <a href="registration.html">register</a></p>
     </form>
+    </div>
   </body>
 </html>
