--- a/registration.html
+++ b/registration.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>registration</title>
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
-    <p><a href="/index.html">home</a></p>
-    <h1>register</h1>
-    <form id="rg">
-        <input id="rgname" type="text" name="username" placeholder="username">
-        <input id="rgpass" type="password" name="password" placeholder="password">
+  </head>
+  <body>
+    <div id="registration-form">
+      <h1>register</h1>
+      <form id="rg">
+        <input id="rgname" type="text" name="username" placeholder="username" />
+        <input
+          id="rgpass"
+          type="password"
+          name="password"
+          placeholder="password"
+        />
         <button id="rgbtn" type="submit">register</button>
         <p>already have an account? <a href="login.html">login</a></p>
-    </form>
-</body>
+      </form>
+    </div>
+  </body>
 </html>
