--- a/registration.html
+++ b/registration.html
@@ -11,12 +11,19 @@
     <div id="registration-form">
       <h1>register</h1>
       <form id="rg">
-        <input id="rgname" type="text" name="username" placeholder="username" />
+        <input
+          id="rgname"
+          type="text"
+          name="username"
+          placeholder="username"
+          required
+        />
         <input
           id="rgpass"
           type="password"
           name="password"
           placeholder="password"
+          required
         />
         <button id="rgbtn" type="submit">register</button>
         <p>already have an account? <a href="login.html">login</a></p>
